bug 652378 - dexpcom nsAccessible::GetDescription() r=surkov

From 474b06dc24586199d7abf30235b8202b595e9edd Mon Sep 17 00:00:00 2001
---
 accessible/src/atk/nsAccessibleWrap.cpp            |   10 +--
 accessible/src/base/nsAccessible.cpp               |   62 +++++++++++---------
 accessible/src/base/nsAccessible.h                 |    5 ++
 accessible/src/base/nsApplicationAccessible.cpp    |    5 +-
 accessible/src/base/nsApplicationAccessible.h      |    2 +-
 accessible/src/base/nsDocAccessible.cpp            |   15 ++---
 accessible/src/base/nsDocAccessible.h              |    2 +-
 accessible/src/html/nsHTMLImageMapAccessible.cpp   |    6 +-
 accessible/src/html/nsHTMLImageMapAccessible.h     |    2 +-
 accessible/src/html/nsHTMLSelectAccessible.cpp     |   13 ++--
 accessible/src/html/nsHTMLSelectAccessible.h       |    2 +-
 accessible/src/html/nsHTMLTableAccessible.cpp      |   19 +++----
 accessible/src/html/nsHTMLTableAccessible.h        |    2 +-
 accessible/src/mac/mozAccessible.mm                |    5 +-
 accessible/src/msaa/nsAccessibleWrap.cpp           |    4 +-
 accessible/src/xforms/nsXFormsAccessible.cpp       |   18 ++----
 accessible/src/xforms/nsXFormsAccessible.h         |    5 +-
 .../src/xforms/nsXFormsFormControlsAccessible.cpp  |   11 +--
 .../src/xforms/nsXFormsFormControlsAccessible.h    |    4 +-
 .../src/xforms/nsXFormsWidgetsAccessible.cpp       |    5 +-
 accessible/src/xforms/nsXFormsWidgetsAccessible.h  |    2 +-
 accessible/src/xul/nsXULComboboxAccessible.cpp     |   21 ++-----
 accessible/src/xul/nsXULComboboxAccessible.h       |    2 +-
 accessible/src/xul/nsXULListboxAccessible.h        |    2 +-
 accessible/src/xul/nsXULMenuAccessible.cpp         |    9 +--
 accessible/src/xul/nsXULMenuAccessible.h           |    2 +-
 26 files changed, 106 insertions(+), 129 deletions(-)