accessible/src/xul/nsXULComboboxAccessible.cpp
@@ -112,32 +112,25 @@ nsXULComboboxAccessible::GetValue(nsAString& aValue)
   return NS_ERROR_FAILURE;
 }
 
-NS_IMETHODIMP
-nsXULComboboxAccessible::GetDescription(nsAString& aDescription)
+void
+nsXULComboboxAccessible::Description(nsString& aDescription)
 {
   aDescription.Truncate();
-
-  if (IsDefunct())
-    return NS_ERROR_FAILURE;
-
   // Use description of currently focused option
   nsCOMPtr<nsIDOMXULMenuListElement> menuListElm(do_QueryInterface(mContent));
   if (!menuListElm)
-    return NS_ERROR_FAILURE;
+    return;
 
   nsCOMPtr<nsIDOMXULSelectControlItemElement> focusedOptionItem;
   menuListElm->GetSelectedItem(getter_AddRefs(focusedOptionItem));
   nsCOMPtr<nsIContent> focusedOptionContent =
     do_QueryInterface(focusedOptionItem);
   if (focusedOptionContent) {
-    nsAccessible *focusedOption =
-      GetAccService()->GetAccessibleInWeakShell(focusedOptionContent, mWeakShell);
-    NS_ENSURE_TRUE(focusedOption, NS_ERROR_FAILURE);
-
-    return focusedOption->GetDescription(aDescription);
+    nsAccessible* focusedOptionAcc = GetAccService()->
+      GetAccessibleInWeakShell(focusedOptionContent, mWeakShell);
+    if (focusedOptionAcc)
+      focusedOptionAcc->Description(aDescription);
   }
-
-  return NS_OK;
 }
 
 PRBool
